fix: webkit-scrollbar 사용법이 변경된 데에 따른 스크롤 숨김 미적용 문제 해결
https://github.com/mdn/content/pull/31947

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -10,6 +10,18 @@
   font-style: normal;
 }
 
+@-moz-document url-prefix() {
+  :root {
+    scrollbar-width: none;
+  }
+}
+:root {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none;
+}
+
 html,
 body,
 div,
@@ -115,11 +127,6 @@ section {
 body {
   font-family: "inter", sans-serif;
   line-height: 1;
-  &::-webkit-scrollbar {
-    display: none;
-  }
-  scrollbar-width: none;
-  -ms-overflow-style: none;
 }
 ol,
 ul {
